# mcp-fusion

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROMOTION.md  README.md  README_zh.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  stale.yml
docs/: api.md  architecture.md  development.md  pitch.md
examples/: mcp-servers.json
examples/workflows/: code-review.json  db-backup-notify.json  research-pipeline.json
mcp-fusion-promotion/: mcp-fusion-promotion.html
scripts/: github-setup.ps1
social-posts/: hn-post.md  reddit-post.md  v2ex-post.md
src-frontend/: index.html  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src-frontend/src/: App.tsx  main.tsx  routes.tsx
src-frontend/src/lib/: utils.ts
src-frontend/src/pages/: IntentPage.tsx
src-frontend/src/services/: ipc.ts
src-frontend/src/stores/: useGlobalStore.ts  (+2 more)
src-shared/: constants.ts  error-codes.txt  index.ts
src-shared/types/: common.ts  index.ts  ipc.ts  marketplace.ts  mcp.ts  workflow.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: crypto.rs  lib.rs  llm.rs  main.rs  marketplace.rs  metrics.rs  tracing_otel.rs
src-tauri/src/gateway/: mod.rs  mod_tests.rs  sse.rs  stdio.rs  streamable_http.rs
src-tauri/src/orchestrator/: mod.rs  scheduler.rs
src-tauri/src/storage/: mod.rs  sqlite.rs  sqlite_tests.rs
(+23 files in other folders)
