[package]
name = "mcp-fusion"
version = "0.1.0"
description = "MCP Fusion - 多协议融合编排平台"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "rlib"]

[features]
default = ["tauri-runtime"]
tauri-runtime = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-plugin-updater", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "time", "process", "io-util", "sync", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["stream", "json"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["http-proto"] }
tracing-opentelemetry = "0.25"
